<resources>
    <string name="app_name">Book Hub</string>
    <string name="contact_this_friend">Liên hệ đổi sách</string>
    <string name="view_now">Xem ngay</string>
    <string name="ignore">Bỏ Qua</string>
    <string name="had_just_been_added"> mới được thêm vào Book Hub. Click để xem ngay.</string>
    <string name="nav_item_attachment">Attachment</string>
    <string name="nav_item_images">Images</string>
    <string name="nav_item_location">Location</string>
    <string name="nav_sub_menu_item01">menu_item01</string>
    <string name="nav_sub_menu_item02">menu_item02</string>
    <string name="nav_sub_menu">Sub menu</string>
    <string name="drawer_header_text">BookHub</string>
    <string name="action_settings">setting</string>
    <string name="slogan"># Lan tỏa tri thức</string>
    <string name="title_author">Tác giả</string>
    <string name="title_publisher">Nhà xuất bản</string>
    <string name="title_tags">Thể loại</string>
    <string name="title_interest">Sách quan tâm</string>
    <string name="title_title">Tên sách</string>
    <string name="please_wait">Vui lòng chờ giây lát...</string>
    <string name="loading_data">Đang tải dữ liệu</string>
    <string name="error_when_load_book_data">Có lỗi xảy ra khi tải thông tin sách.</string>
    <string name="error_when_load_user_data">Có lỗi xảy ra khi tải thông tin người dùng.</string>
    <string name="book_title">Tên sách</string>
    <string name="book_title_sample">Tâm lý học tội phạm</string>
    <string name="author">Tác giả</string>
    <string name="author_sample">Nguyễn Nhật Ánh</string>
    <string name="add_wanted_book">Săn</string>
    <string name="ic_book">&#xf02d;</string>
    <string name="ic_author">&#xf2be;</string>
    <string name="invalid_book_info">Thông tin sách không hợp lệ.</string>
    <string name="post_book_to_exchange">Đăng sách cần đổi</string>
</resources>
