<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tool="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:padding="@dimen/activity_horizontal_margin">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.example.sherman.sbook.customViews.FontAwesomeTextView
            android:paddingRight="4dp"
            android:text="@string/ic_book"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/tvBookTitle"
            android:text="@string/book_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <EditText
        android:id="@+id/etTitle"
        android:hint="@string/book_title_sample"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.example.sherman.sbook.customViews.FontAwesomeTextView
            android:paddingRight="4dp"
            android:text="@string/ic_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/tvAuthor"
            android:text="@string/author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <EditText
        android:id="@+id/etAuthor"
        android:hint="@string/author_sample"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/btnAddWantedBook"
        android:text="@string/add_wanted_book"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>